[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/itembutton.gd" type="Script" id=1]
[ext_resource path="res://ar2.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 45.3333, 41 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 40, 40 )

[node name="button" type="Area2D"]
scale = Vector2( 1.5, 1.5 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.33333, 3 )
shape = SubResource( 7 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
position = Vector2( -41.3333, -36.6667 )
shape = SubResource( 11 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )

[connection signal="area_entered" from="." to="." method="_on_button_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_button_area_exited"]
[connection signal="pressed" from="TouchScreenButton" to="." method="_on_TouchScreenButton_pressed"]
